# AirTrafficSim

./: .buildinfo  .flake8  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  Readme.md  docker-compose-prd.yml  docker-compose.debug.yml  docker-compose.yml  environment.yml  genindex.html  index.html  install.html  meta.yaml  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  start.html
.doctrees/: environment.pickle  index.doctree  install.doctree  start.doctree
.doctrees/api/: airtrafficsim.core.doctree  airtrafficsim.server.doctree  airtrafficsim.utils.doctree  index.doctree
.doctrees/development/: client.doctree  documentation.doctree  guide.doctree  structure.doctree  test.doctree
.doctrees/tutorial/: UI.doctree  creating_env.doctree  data.doctree  flight_plan.doctree  historic.doctree  openap.doctree  replay.doctree  simulation.doctree  structure.doctree  weather.doctree
.github/workflows/: docs.yml  main_airtrafficsim.yml  paper.yml  receivePR.yml  sphinx.yml  tests.yml
_sources/: index.md.txt  install.md.txt  start.md.txt
_sources/api/: airtrafficsim.server.rst.txt  index.rst.txt
_sources/development/: client.md.txt  guide.md.txt
_sources/tutorial/: UI.md.txt  creating_env.md.txt  data.md.txt  replay.md.txt  simulation.md.txt  structure.md.txt  weather.md.txt
airtrafficsim/: Convert.ipynb  __main__.py
airtrafficsim/core/: aircraft.py  autopilot.py  environment.py  nav.py  navigation.py  traffic.py
airtrafficsim/env/: FullFlightDemo.py  MILP.py
airtrafficsim/server/: data.py  replay.py  server.py
airtrafficsim/utils/: calculation.py  enums.py  route_detection.py  unit.py  unit_conversion.py
api/: airtrafficsim.core.html  airtrafficsim.server.html  airtrafficsim.utils.html  index.html
api/core/: airtrafficsim.core.aircraft.html  airtrafficsim.core.autopilot.html  airtrafficsim.core.bada.html  airtrafficsim.core.environment.html  (+5 more)
client/: .dockerignore  .gitignore  Dockerfile  capacitor.config.ts  craco.config.js  package.json
data/: .gitignore
development/: client.html  documentation.html  guide.html  structure.html  test.html
docs/: requirements.txt
environment/: ConvertHistoricDemo.py  DemoEnv.py  FullFlightDemo.py  WeatherDemo.py
server/: .gitignore  Dockerfile  main.py  package-lock.json  package.json  server.js
simulation/: .gitignore  Convert.ipynb  __main__.py
tests/: test_cal.py  test_environment.py  test_ui.py
tmp/: profile.prof
traffic/: .gitignore  __main__.py  perforamnce.py
tutorial/: UI.html  creating_env.html  data.html  flight_plan.html  flow.html  historic.html  openap.html  replay.html  simulation.html  structure.html  weather.html
(+1278 files in other folders)
